Add CloudWatch Alarm permissions to alert handler

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -66,6 +66,15 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
+        - PolicyName: CloudWatchAlarmPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "cloudwatch:DescribeAlarmHistory"
+                Resource:
+                  - "*"
         - PolicyName: SnsPolicy
           PolicyDocument:
             Version: "2012-10-17"
