Switch prxu.org MX to Google

--- a/etc/prxu.org-hosted_zone.yml
+++ b/etc/prxu.org-hosted_zone.yml
@@ -85,7 +85,11 @@ Resources:
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
-            - "10 inbound-smtp.us-east-1.amazonaws.com."
+            - "1 ASPMX.L.GOOGLE.COM."
+            - "5 ALT1.ASPMX.L.GOOGLE.COM."
+            - "5 ALT2.ASPMX.L.GOOGLE.COM."
+            - "10 ASPMX2.GOOGLEMAIL.COM."
+            - "10 ASPMX3.GOOGLEMAIL.COM."
           TTL: "300"
           Type: MX
           Name: !Ref Domain
