Put all ASG notifications in a single configuration

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -449,18 +449,15 @@ Resources:
       NotificationConfigurations:
         - TopicARN:
             Fn::ImportValue:
-              !Sub ${NotificationsStackName}-ASGNotificationSnsTopic
-          NotificationTypes:
-            - "autoscaling:EC2_INSTANCE_LAUNCH"
-            - "autoscaling:EC2_INSTANCE_TERMINATE"
-            - "autoscaling:TEST_NOTIFICATION"
-        - TopicARN:
-            # TODO These should be treated as errors
-            Fn::ImportValue:
                 !Sub ${NotificationsStackName}-ASGNotificationSnsTopic
           NotificationTypes:
+            # TODO The error notifications should be handled differently by the
+            # lambda
+            - "autoscaling:EC2_INSTANCE_LAUNCH"
             - "autoscaling:EC2_INSTANCE_LAUNCH_ERROR"
+            - "autoscaling:EC2_INSTANCE_TERMINATE"
             - "autoscaling:EC2_INSTANCE_TERMINATE_ERROR"
+            - "autoscaling:TEST_NOTIFICATION"
         - TopicARN: !Ref ECSDrainSNSTopic
           NotificationTypes:
             - "autoscaling:EC2_INSTANCE_LAUNCH"
