Add tal.dovetail.prxu.org MX records

--- a/etc/prxu.org-hosted_zone.yml
+++ b/etc/prxu.org-hosted_zone.yml
@@ -93,6 +93,15 @@ Resources:
           TTL: "300"
           Type: MX
           Name: !Ref Domain
+        - ResourceRecords:
+            - "1 ASPMX.L.GOOGLE.COM."
+            - "5 ALT1.ASPMX.L.GOOGLE.COM."
+            - "5 ALT2.ASPMX.L.GOOGLE.COM."
+            - "10 ASPMX2.GOOGLEMAIL.COM."
+            - "10 ASPMX3.GOOGLEMAIL.COM."
+          TTL: "300"
+          Type: MX
+          Name: !Sub tal.dovetail.${Domain}
   CloudFront:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
