Add CloudFormation stack tags to resources

--- a/etc/prxu.org-hosted_zone.yml
+++ b/etc/prxu.org-hosted_zone.yml
@@ -12,7 +12,11 @@ Resources:
     Properties:
       HostedZoneConfig:
         Comment: User-generated Content
-      # HostedZoneTags:
+      HostedZoneTags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       #   - Key: Project
       #     Value: radiotopia.fm
       Name: !Ref Domain
