--- a/etc/radiotopia.com-hosted_zone.yml
+++ b/etc/radiotopia.com-hosted_zone.yml
@@ -15,6 +15,10 @@ Resources:
       HostedZoneTags:
         - Key: Project
           Value: radiotopia.fm
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Name: !Ref Domain
   Website:
     Type: "AWS::Route53::RecordSetGroup"
