--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -132,6 +132,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 10
   SlackMessageRelayPermission:
     Type: "AWS::Lambda::Permission"
@@ -194,6 +198,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 10
   CloudFormationNotificationPermission:
     Type: "AWS::Lambda::Permission"
@@ -256,6 +264,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 10
   ASGNotificationPermission:
     Type: "AWS::Lambda::Permission"
@@ -316,6 +328,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 10
   CloudWatchAlarmNotificationHandlerErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
@@ -488,6 +504,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 3
   IkeSlashCommandsHandlerLambdaFunction:
     Type: "AWS::Lambda::Function"
@@ -513,6 +533,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 3
   IkeCallbackHandlerErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
