--- a/storage/storage.yml
+++ b/storage/storage.yml
@@ -15,6 +15,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VersioningConfiguration:
         Status: Suspended
   InfrastructureSourceBucket:
@@ -25,6 +29,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VersioningConfiguration:
         Status: Suspended
   InfrastructureConfigBucket:
@@ -35,6 +43,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VersioningConfiguration:
         Status: Enabled
   InfrastructureSnapshotsBucket:
@@ -45,6 +57,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VersioningConfiguration:
         Status: Suspended
   InfrastructureApplicationCodeBucket:
@@ -55,6 +71,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VersioningConfiguration:
         Status: Enabled
 Outputs:
