Add more stack tags to (safe?) resources

--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -81,6 +81,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Castle-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VpcId: !Ref VPC
   # ALB Listener Rules
   CastleALBHTTPSHostWildcardListenerRule:
