--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -33,6 +33,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub "${EnvironmentType} ${VPC} wildcard"
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   RadiotopiaWildcardCertificate:
     Type: "AWS::CertificateManager::Certificate"
     Properties:
@@ -47,6 +51,10 @@ Resources:
           Value: radiotopia.fm
         - Key: Name
           Value: radiotopia.fm/com wildcard
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
 Outputs:
   WildcardCertificateArn:
     Description: The ARN for the wildcard certificate
