--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -129,6 +129,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 90
   ECSAmiInfo:
     Type: "Custom::EcsAmiLookup"
@@ -253,6 +257,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}-ECS-instances-web
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSInstanceSSHSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -270,6 +278,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}-ECS-instances-SSH
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSInstanceReturnTrafficSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -291,6 +303,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}-ECS-instances-inbound
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSInstanceOutboundSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -306,6 +322,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}-ECS-instances-outbound
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSClusterASGLaunchConfiguration:
     # TODO Finish config
     # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/quickref-ecs.html
@@ -474,6 +494,12 @@ Resources:
         - Key: Name
           Value: !Ref ECSCluster
           PropagateAtLaunch: true
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+          PropagateAtLaunch: true
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+          PropagateAtLaunch: true
       #  TerminationPolicies:
         # - String
       VPCZoneIdentifier:
@@ -593,6 +619,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 300
   # Autoscaling
   ASGSizerRole:
@@ -660,6 +690,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 30
   ASGSizerTriggerIAMRole:
     Type: "AWS::IAM::Role"
