--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -80,6 +80,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Play-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
           Value: 15
