Add a few more stack-level tags

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -92,6 +92,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Dovetail-${EnvironmentType}-LB-web_ssh
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   # Load balancer
   DovetailALB:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
@@ -111,6 +115,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Dovetail-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   DovetailALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
@@ -218,6 +226,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub DovetailApp-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VpcId: !Ref VPC
   DovetailApplicationService:
     Type: "AWS::ECS::Service"
@@ -318,6 +330,10 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 8
   DovetailServiceDesiredCountRolloverResource:
     Type: "Custom::EcsServiceSizeRollover"
@@ -472,6 +488,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Dovetail-Proxy-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VpcId: !Ref VPC
   DovetailProxyLogGroup:
     Type: "AWS::Logs::LogGroup"
