--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -48,6 +48,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}-LB-web_ssh
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   PlatformALBDefaultTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     Properties:
@@ -64,6 +68,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VpcId: !Ref VPC
   PlatformALB:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
@@ -83,6 +91,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   PlatformALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
