--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -95,6 +95,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AppName}-${EnvironmentType}-LB-web_ssh
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ALB:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
@@ -113,6 +117,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AppName}-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
@@ -153,6 +161,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AppName}-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VpcId: !Ref VPC
   # CloudWatch Alarms
   ALBTarget500Alarm:
