--- a/stacks/web-application.yml
+++ b/stacks/web-application.yml
@@ -94,6 +94,10 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AppName}-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       VpcId: !Ref VPC
   # ALB Listener Rules
   ALBHTTPSHostWildcardListenerRule:
