Add metrics host

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -742,6 +742,8 @@ Resources:
             Value: dovetail.prxu.org
           - Name: FEEDER_HOST
             Value: feeder.staging.prx.tech
+          - Name: METRICS_HOST
+            Value: metrics.staging.prx.tech
           - Name: PUBLISH_HOST
             Value: publish.staging.prx.tech
           - Name: PUBLISH_USER
