Add app code write policy for CodeBuild

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -136,6 +136,15 @@ Resources:
                   - "s3:GetObjectVersion"
                 Resource:
                   - !Sub arn:aws:s3:::${CiCodeBuildSourceArchiveBucket}/*
+        - PolicyName: ApplicationCodeWriteAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:PutObject"
+                Resource:
+                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
         - PolicyName: ParameterStorePolicy
           PolicyDocument:
             Version: "2012-10-17"
