First shot at analytics ingest

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -79,6 +79,8 @@ Parameters:
     Type: String
   UploadLambdaCodeS3ObjectVersion:
     Type: String
+  AnalyticsIngestLambdaCodeS3ObjectVersion:
+    Type: String
   PRXUploadAccessKey:
     Type: String
   # Parameter Overrides
@@ -782,6 +784,29 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/metrics.prx.org.yml"]]
+      TimeoutInMinutes: "5"
+  #### analytics-ingest-lambda #################################################
+  AnalyticsIngestLambdaStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
+      Parameters:
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        CodeS3Bucket:
+          Fn::ImportValue:
+              !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        CodeS3ObjectVersion: !Ref AnalyticsIngestLambdaCodeS3ObjectVersion
+      Tags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/analytics-ingest-lambda.yml"]]
       TimeoutInMinutes: "5"
 Outputs:
   VPCCertificateArn:
