--- a/stacks/analytics-ingest-lambda.yml
+++ b/stacks/analytics-ingest-lambda.yml
@@ -39,8 +39,9 @@ Resources:
       Environment:
         Variables:
           BQ_IMPRESSIONS_TABLE: "impressions"
-          BQ_DOWNLOADS_TABLE: "downloads"
+          BQ_DOWNLOADS_TABLE: "downlads"
           BQ_PROJECT_ID: "prx-metrics"
+          TEST_ENV_KEY: "test-value"
       Handler: index.handler
       MemorySize: 256
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
