--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -411,6 +411,7 @@ Resources:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         PRXUploadAccessKey: !Ref PRXUploadAccessKey
+        EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         CodeS3Bucket:
           Fn::ImportValue:
