Cycling CW Alarms off to fix resource names

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -121,66 +121,87 @@ Resources:
       FunctionName: !Ref UploadLambdaFunction
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${UploadRestApi}/${UploadRestApiStage}/*"
-  UploadLambdaIamRoleErrorAlarm:
-    Type: "AWS::CloudWatch::Alarm"
-    Condition: CreateProductionResources
-    Properties:
-      ActionsEnabled: true
-      AlarmName: "[Upload][Lambda][Error] Invocation 4XX"
-      AlarmActions:
-        - !Ref OpsErrorMessagesSnsTopicArn
-      AlarmDescription:
-        The error rate on the upload lambda has exceeded 0
-      ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
-      MetricName: Errors
-      Namespace: AWS/Lambda
-      Period: "60"
-      Statistic: Sum
-      Threshold: "0"
-      TreatMissingData: notBreaching
-      Dimensions:
-        - Name: FunctionName
-          Value: !Ref UploadLambdaFunction
-  UploadLambdaIamRoleThrottleAlarm:
-    Type: "AWS::CloudWatch::Alarm"
-    Condition: CreateProductionResources
-    Properties:
-      ActionsEnabled: true
-      AlarmName: "[Upload][Lambda][Throttles] Invocation 429"
-      AlarmActions:
-        - !Ref OpsErrorMessagesSnsTopicArn
-      AlarmDescription:
-        Throttles on the upload lambda has exceeded 0
-      ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
-      MetricName: Throttles
-      Namespace: AWS/Lambda
-      Period: "60"
-      Statistic: Sum
-      Threshold: "0"
-      TreatMissingData: notBreaching
-      Dimensions:
-        - Name: FunctionName
-          Value: !Ref UploadLambdaFunction
-  UploadLambdaIamRoleDurationAlarm:
-    Type: "AWS::CloudWatch::Alarm"
-    Condition: CreateProductionResources
-    Properties:
-      ActionsEnabled: true
-      AlarmName: "[Upload][Lambda][Duration] Unusually slow"
-      AlarmActions:
-        - !Ref OpsErrorMessagesSnsTopicArn
-      AlarmDescription:
-        At least one invocation duration exceeded 225ms
-      ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
-      MetricName: Duration
-      Namespace: AWS/Lambda
-      Period: "60"
-      Statistic: Maximum
-      Threshold: "225"
-      TreatMissingData: notBreaching
-      Dimensions:
-        - Name: FunctionName
-          Value: !Ref UploadLambdaFunction
+  # UploadLambdaErrorAlarm:
+  #   Type: "AWS::CloudWatch::Alarm"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     ActionsEnabled: true
+  #     AlarmName: "[Upload][Lambda][Error] Invocation 4XX"
+  #     AlarmActions:
+  #       - !Ref OpsErrorMessagesSnsTopicArn
+  #     AlarmDescription:
+  #       The error rate on the upload lambda has exceeded 0
+  #     ComparisonOperator: GreaterThanThreshold
+  #     EvaluationPeriods: "1"
+  #     MetricName: Errors
+  #     Namespace: AWS/Lambda
+  #     Period: "60"
+  #     Statistic: Sum
+  #     Threshold: "0"
+  #     TreatMissingData: notBreaching
+  #     Dimensions:
+  #       - Name: FunctionName
+  #         Value: !Ref UploadLambdaFunction
+  # UploadLambdaThrottleAlarm:
+  #   Type: "AWS::CloudWatch::Alarm"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     ActionsEnabled: true
+  #     AlarmName: "[Upload][Lambda][Throttles] Invocation 429"
+  #     AlarmActions:
+  #       - !Ref OpsErrorMessagesSnsTopicArn
+  #     AlarmDescription:
+  #       Throttles on the upload lambda has exceeded 0
+  #     ComparisonOperator: GreaterThanThreshold
+  #     EvaluationPeriods: "1"
+  #     MetricName: Throttles
+  #     Namespace: AWS/Lambda
+  #     Period: "60"
+  #     Statistic: Sum
+  #     Threshold: "0"
+  #     TreatMissingData: notBreaching
+  #     Dimensions:
+  #       - Name: FunctionName
+  #         Value: !Ref UploadLambdaFunction
+  # UploadLambdaDurationAlarm:
+  #   Type: "AWS::CloudWatch::Alarm"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     ActionsEnabled: true
+  #     AlarmName: "[Upload][Lambda][Duration] Unusually slow"
+  #     AlarmActions:
+  #       - !Ref OpsErrorMessagesSnsTopicArn
+  #     AlarmDescription:
+  #       At least one invocation duration exceeded 225ms
+  #     ComparisonOperator: GreaterThanThreshold
+  #     EvaluationPeriods: "1"
+  #     MetricName: Duration
+  #     Namespace: AWS/Lambda
+  #     Period: "60"
+  #     Statistic: Maximum
+  #     Threshold: "225"
+  #     TreatMissingData: notBreaching
+  #     Dimensions:
+  #       - Name: FunctionName
+  #         Value: !Ref UploadLambdaFunction
+  # UploadApiGatewayMethodAlarm:
+  #   Type: "AWS::CloudWatch::Alarm"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     ActionsEnabled: true
+  #     AlarmName: "[Upload][API][Error] API Gateway 5XX"
+  #     AlarmActions:
+  #       - !Ref OpsErrorMessagesSnsTopicArn
+  #     AlarmDescription:
+  #       At least one invocation duration exceeded 225ms
+  #     ComparisonOperator: GreaterThanThreshold
+  #     EvaluationPeriods: "1"
+  #     MetricName: Duration
+  #     Namespace: AWS/Lambda
+  #     Period: "60"
+  #     Statistic: Maximum
+  #     Threshold: "225"
+  #     TreatMissingData: notBreaching
+  #     Dimensions:
+  #       - Name: FunctionName
+  #         Value: !Ref UploadLambdaFunction
