--- a/stacks/analytics-ingest-lambda.yml
+++ b/stacks/analytics-ingest-lambda.yml
@@ -61,12 +61,12 @@ Resources:
         S3Bucket: !Ref CodeS3Bucket
         S3Key: !Sub "lambda/PRX-analytics-ingest-lambda.zip"
         S3ObjectVersion: !Ref CodeS3ObjectVersion
-      Description: Dovetail analytics redis increments TESTING
-      Handler: index.handlerTESTING
-      MemorySize: 320
+      Description: Dovetail analytics redis increments
+      Handler: index.handler
+      MemorySize: 256
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
       Runtime: nodejs6.10
-      Timeout: 31
+      Timeout: 30
   # Lambda Alarms
   AnalyticsBigqueryErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
