Update upload.prx.org DNS record

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -350,6 +350,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub metrics.${Domain}
+        - ResourceRecords:
+            - upload.prx.tech.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub upload.${Domain}
   PrxDotOrg:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
@@ -417,11 +422,6 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub categorizer.${Domain}
-        - ResourceRecords:
-            - !Sub d31nihxqseius7.cloudfront.net.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub upload.${Domain}
   Contegix:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
