--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -413,6 +413,7 @@ Resources:
         PRXUploadAccessKey: !Ref PRXUploadAccessKey
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        WildcardCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
         CodeS3Bucket:
           Fn::ImportValue:
               !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
