Fix template syntax

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -89,7 +89,7 @@ Resources:
     Type: "AWS::ApiGateway::DomainName"
     Properties:
       CertificateArn: !Ref WildcardCertificateArn
-      DomainName: !Join ["", ["upload-", !Ref UploadRestApi, "-", !Ref AWS::Region, !If [CreateStagingResources, ".staging", ""], ".prx.tech"]]
+      DomainName: !Join ["", ["upload-", !Ref UploadRestApi, "-", !Ref "AWS::Region", !If [CreateStagingResources, ".staging", ""], ".prx.tech"]]
   UploadRestApiBasePathMapping:
     Type: 'AWS::ApiGateway::BasePathMapping'
     Properties:
