Fix more syntax

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -103,12 +103,12 @@ Resources:
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: AAAA
-          Name: !Join ["", ["upload-", !Ref UploadRestApi, "-", !Ref AWS::Region, !If [CreateStagingResources, ".staging", ""], ".prx.tech"]]
+          Name: !Join ["", ["upload-", !Ref UploadRestApi, "-", !Ref "AWS::Region", !If [CreateStagingResources, ".staging", ""], ".prx.tech"]]
           AliasTarget:
             DNSName: !GetAtt UploadRestApiDomainName.DistributionDomainName
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: A
-          Name: !Join ["", ["upload-", !Ref UploadRestApi, "-", !Ref AWS::Region, !If [CreateStagingResources, ".staging", ""], ".prx.tech"]]
+          Name: !Join ["", ["upload-", !Ref UploadRestApi, "-", !Ref "AWS::Region", !If [CreateStagingResources, ".staging", ""], ".prx.tech"]]
           AliasTarget:
             DNSName: !GetAtt UploadRestApiDomainName.DistributionDomainName
             HostedZoneId: Z2FDTNDATAQYW2
