--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -94,8 +94,8 @@ Resources:
     Type: 'AWS::ApiGateway::BasePathMapping'
     Properties:
       BasePath: '/prod' # This should match the StageName of the UploadRestApiStage
-      DomainName: !Ref RestApiDomainName
-      RestApiId: !Ref RestApi
+      DomainName: !Ref UploadRestApiDomainName
+      RestApiId: !Ref UploadRestApi
   UploadRestApiDomainNameRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
