Work on base path mapping for upload custom domain

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -91,11 +91,12 @@ Resources:
       CertificateArn: !Ref WildcardCertificateArn
       DomainName: !Join ["", ["upload-", !Ref UploadRestApi, "-", !Ref "AWS::Region", !If [CreateStagingResources, ".staging", ""], ".prx.tech"]]
   UploadRestApiBasePathMapping:
-    Type: 'AWS::ApiGateway::BasePathMapping'
+    Type: "AWS::ApiGateway::BasePathMapping"
     Properties:
-      BasePath: '/prod' # This should match the StageName of the UploadRestApiStage
+      # BasePath: 'prod' # This should match the StageName of the UploadRestApiStage
       DomainName: !Ref UploadRestApiDomainName
       RestApiId: !Ref UploadRestApi
+      Stage: prod
   UploadRestApiDomainNameRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
