Needs path actions

--- a/stacks/analytics-ingest-lambda.yml
+++ b/stacks/analytics-ingest-lambda.yml
@@ -33,6 +33,7 @@ Resources:
                 Action:
                   - "ssm:DescribeParameters"
                   - "ssm:GetParameters"
+                  - "ssm:GetParametersByPath"
                 Resource:
                   - !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/prx/${EnvironmentTypeAbbreviation}/analytics-*"
       ManagedPolicyArns:
