Use stage name for upload custom domain

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -93,10 +93,10 @@ Resources:
   UploadRestApiBasePathMapping:
     Type: "AWS::ApiGateway::BasePathMapping"
     Properties:
-      # BasePath: 'prod' # This should match the StageName of the UploadRestApiStage
+      # BasePath: 'prod'
       DomainName: !Ref UploadRestApiDomainName
       RestApiId: !Ref UploadRestApi
-      Stage: prod
+      Stage: prod # This should match the StageName of the UploadRestApiStage
   UploadRestApiDomainNameRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
