--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -751,7 +751,7 @@ Resources:
           - Name: PUBLISH_PASS
             Value: test1234
           - Name: UPLOAD_HOST
-            Value: 5e12hsv5dh.execute-api.us-east-1.amazonaws.com
+            Value: upload-5e12hsv5dh-us-east-1.staging.prx.tech
         Image: 561178107736.dkr.ecr.us-east-1.amazonaws.com/meta.prx.org:latest
         Type: LINUX_CONTAINER
       # If this Name changes, the CodeBuild role policy needs to change too
